[package]
name = "ls7366"
version = "0.2.1"
authors = ["joshua salzedo <thHunkn0WNd@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust interface to the LS7366 quadrature encoder buffer."
repository = "https://github.com/theunkn0wn1/LS7366_rust"
categories = ["embedded", "no-std"]
keywords = ["ls7366", "quadrature_encoder"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
bitfield = "0.13.2"

[dev-dependencies]
rppal = { version = "0.11.3", features = ["hal"] }
embedded-hal-mock = "0.7.1"