[package]
name = "embassy-ls7366"
version = "0.1.0"
authors = ["Joshua Salzedo <joshuasalzedo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.ls7366]
path = "../ls7366"

[dependencies.embassy]
git = "ssh://git@github.com/xoviat/embassy.git"
branch  = "spi"

[dependencies.embassy-traits]
version = "0.1.0"
git = "ssh://git@github.com/xoviat/embassy.git"
branch = "spi"
#git = "https://github.com/embassy-rs/embassy.git"
#path = "/home/orion/projects/embassy/embassy-traits"


[dependencies.embassy-stm32]
version = "*"
git = "ssh://git@github.com/xoviat/embassy.git"
branch = "spi"
#git = "https://github.com/embassy-rs/embassy.git"
#path = "/home/orion/projects/embassy/embassy-stm32"
# TODO: support for other chips
features = ["stm32f446"]

