

[package]
name = "embassy-ls7366"
version = "0.1.0"
authors = ["Joshua Salzedo <joshuasalzedo@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.ls7366]
path = "../ls7366"

[dependencies.embassy]
git = "https://github.com/xoviat/embassy.git"
branch = "spi"

[dependencies.embassy-traits]
version = "0.1.0"
git = "https://github.com/xoviat/embassy.git"
branch = "spi"
#git = "https://github.com/embassy-rs/embassy.git"
#path = "/home/orion/projects/embassy/embassy-traits"


[dependencies.embassy-stm32]
version = "*"
git = "https://github.com/xoviat/embassy.git"
branch = "spi"
#git = "https://github.com/embassy-rs/embassy.git"
#path = "/home/orion/projects/embassy/embassy-stm32"
# TODO: support for other chips
features = ["stm32f446"]

[dev-dependencies]
panic-probe = "0.2.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"


[dev-dependencies.rtt-target]
version = "0.3.0"
features = ["cortex-m"]

[dev-dependencies.stm32f4xx-hal]
version = "0.8.3"
features = ["rt", "stm32f446"] # replace the model of your microcontroller here
git = "https://github.com/stm32-rs/stm32f4xx-hal.git"


[dev-dependencies.futures]
version = "0.3.13"
default-features = false
features = ["async-await"]